--- a/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
+++ b/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
@@ -30,7 +30,7 @@
 			<p:dataTable value="#{practiseController.listPractise}"
 				var="practise" id="practiseTable">
 
-				<p:column headerText="Practise Id">
+				<p:column headerText="Practice Id">
 					#{practise.id}
 				</p:column>
 				<p:column headerText="Name">
