--- a/src/main/webapp/Views/Secured/User/UserView.xhtml
+++ b/src/main/webapp/Views/Secured/User/UserView.xhtml
@@ -114,8 +114,9 @@ function createClicked(args,dialogName){
 					<p:panelGrid id="panelGrid" columns="2">
 
 						<p:outputLabel for="tfName" value="Name:" />
-						<p:inputText id="tfName" value="#{userController.user.name}">
+						<p:inputText id="tfName" value="#{userController.user.name}" validatorMessage="Name can only contain alphabets">
 							<f:validateRegex pattern="[a-zA-Z]*" />
+							
 							<!-- <f:ajax render="result" /> -->
 						</p:inputText>
 
