--- a/src/main/webapp/Views/Secured/User/UserView.xhtml
+++ b/src/main/webapp/Views/Secured/User/UserView.xhtml
@@ -109,7 +109,7 @@ function createClicked(args,dialogName){
 				<h:form id="userForm">
 
 					<!-- showDetail="true"  -->
-					<p:blockUI block=":userForm" trigger="btnSave" />
+					<!-- <p:blockUI block=":userForm" trigger="btnSave" /> -->
 					<p:messages id="msgs" />
 					<p:panelGrid id="panelGrid" columns="2">
 
@@ -231,7 +231,8 @@ function createClicked(args,dialogName){
 						actionListener="#{userController.saveButtonClicked}"
 						widgetVar="btnSave" update=":userTable,userForm"
 						validateClient="true" onerror="PF('block').hide()"
-						oncomplete="PF('block').hide()" />
+						oncomplete="PF('block').hide()" process="@this,userForm"
+						onclick="PF('block').show()" />
 					<!-- onclick="PF('block').show()" , ajax="false , ,:userDialog" -->
 				</h:form>
 			</p:dialog>
