--- a/src/main/webapp/Views/Secured/User/UserView.xhtml
+++ b/src/main/webapp/Views/Secured/User/UserView.xhtml
@@ -207,11 +207,11 @@ function createClicked(args,dialogName){
 									value="#{userController.selectedPermission.canProviderEdit}" />
 
 
-								<h:outputText value="Can Payer add transaction: " />
+								<h:outputText value="Can Add Transaction: " />
 								<p:selectBooleanCheckbox
 									value="#{userController.selectedPermission.canPayerTransactionAdd}" />
 
-								<h:outputText value="Can Payer Edit transaction: " />
+								<h:outputText value="Can Edit Transaction: " />
 								<p:selectBooleanCheckbox
 									value="#{userController.selectedPermission.canPayerTransactionEdit}" />
 
